# Valley-Terrain-Modelling

./: CMakeLists.txt  README.md  data.cpp  datatypes.h  exec.sh  font.frag  font.vs  fragment.frag  fragmentCloud.frag  fragmentOBJ.frag  fragwater.frag  funcs.cpp  helptext.txt  main.cpp  texture.cpp  vertex.vs
Week2/: data.cpp  font.fnt  fragment.frag  funcs.cpp  helptext.txt  vertex.vs
include/: data.h  funcs.hpp
legacy/: main.cpp  main2.cpp  transformations.cpp
res/: comic-sans.fnt  karumbi.fnt
shader/: fragment.frag  shadowfrag.frag
src/: main.cpp
